# nextmap/Cargo.toml
[package]
name = "nextmap"
version = "0.2.3"
edition = "2021"
authors = ["NextMap Contributors"]
description = "Next generation network scanner with stealth capabilities and CVE detection"
license = "MIT"
repository = "https://github.com/pozivo/nextmap"
homepage = "https://github.com/pozivo/nextmap"
documentation = "https://github.com/pozivo/nextmap"
readme = "README.md"
keywords = ["network", "scanner", "security", "pentesting", "stealth", "cve"]
categories = ["command-line-utilities", "network-programming"]
exclude = [
    ".github/*",
    "assets/*",
    "*.md",
    "target/*",
]

[[bin]]
name = "nextmap"
path = "src/main.rs"

[dependencies]
# Motore Asincrono (I/O ad alta performance)
tokio = { version = "1", features = ["full"] }
# Networking a basso livello (per scansione SYN)
pnet = "0.33" 
# Serializzazione (JSON/YAML)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Gestione del tempo
chrono = { version = "0.4", features = ["serde"] }
# Interfaccia a riga di comando (CLI)
clap = { version = "4.4", features = ["derive"] }
# Necessario per YAML se lo usi, altrimenti rimuovi
serde_yaml = "0.9"
# Per il controllo dei permessi di root
nix = "0.27"
# Per parsing CIDR e range IP
ipnet = "2.9"
# Per progress bar e output colorato
indicatif = "0.17"
colored = "2.0"
# Per parsing delle versioni dai banner
regex = "1.10"
# Raw packet manipulation per stealth scanning
socket2 = "0.5"
# Random number generation per evasion
rand = "0.8"
# Database SQLite per CVE
rusqlite = { version = "0.29", features = ["bundled"] }
# HTTP client per CVE updates
reqwest = { version = "0.11", features = ["json"] }
# URL parsing
url = "2.4"